[gd_scene load_steps=8 format=3 uid="uid://c78xpjp8uncpx"]

[ext_resource type="Script" path="res://hud/Table Screen/Main/Player Info/player_info.gd" id="1_2vkld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnq66"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxyev"]
bg_color = Color(1, 0.27451, 0.27451, 1)

[sub_resource type="Animation" id="Animation_rmayc"]
resource_name = "Hide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-298, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/OpenClose:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [">>"]
}

[sub_resource type="Animation" id="Animation_ob33v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-298, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/OpenClose:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [">>"]
}

[sub_resource type="Animation" id="Animation_fp03b"]
resource_name = "Show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-298, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/OpenClose:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["<<"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xtyin"]
_data = {
"Hide": SubResource("Animation_rmayc"),
"RESET": SubResource("Animation_ob33v"),
"Show": SubResource("Animation_fp03b")
}

[node name="Player Info" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 370.0
script = ExtResource("1_2vkld")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -298.0
offset_bottom = 294.0

[node name="Name" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 10.0
offset_right = 57.0
offset_bottom = 26.0
text = "Name"

[node name="LevelRaceClass" type="RichTextLabel" parent="Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 30.0
offset_right = 283.0
offset_bottom = 56.0
bbcode_enabled = true
text = "Level {X} {Race} {Class}"
fit_content = true
scroll_active = false

[node name="HealthBar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 280.0
offset_bottom = 125.0
theme_override_styles/background = SubResource("StyleBoxFlat_xnq66")
theme_override_styles/fill = SubResource("StyleBoxFlat_fxyev")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="Panel/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1

[node name="Stats" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
metadata/_edit_use_anchors_ = true

[node name="StrContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 200.0
offset_right = 155.0
offset_bottom = 225.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Strength" type="Label" parent="Panel/Stats/StrContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "STR"
horizontal_alignment = 1

[node name="DexContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 240.0
offset_right = 155.0
offset_bottom = 265.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Dexterity" type="Label" parent="Panel/Stats/DexContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "DEX
"
horizontal_alignment = 1

[node name="ConContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 280.0
offset_right = 155.0
offset_bottom = 305.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Constitution" type="Label" parent="Panel/Stats/ConContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CON
"
horizontal_alignment = 1

[node name="IntContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 200.0
offset_right = 305.0
offset_bottom = 225.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Intelligence" type="Label" parent="Panel/Stats/IntContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "INT"
horizontal_alignment = 1

[node name="WisContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 240.0
offset_right = 305.0
offset_bottom = 265.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Wisdom" type="Label" parent="Panel/Stats/WisContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "WIS"
horizontal_alignment = 1

[node name="ChaContainer" type="ColorRect" parent="Panel/Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 280.0
offset_right = 305.0
offset_bottom = 305.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Charisma" type="Label" parent="Panel/Stats/ChaContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CHA
"
horizontal_alignment = 1

[node name="OpenClose" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 298.0
offset_right = 325.0
offset_bottom = 31.0
text = ">>"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xtyin")
}

[connection signal="pressed" from="Panel/OpenClose" to="." method="_on_open_close_pressed"]
